[lworld] Deoptimization fails when trying to re-assign empty inline type elements of a flattened array

XMLWordPrintable

      # Internal Error (/scratch/mesos/slaves/1a7cca38-e299-473e-97af-f3151e5423d5-S71556/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1d9393a0-085e-49f9-b0a2-ad0b4bdf51e6/runs/b51925ac-3fe7-4726-8857-37d7b1ca1b8a/workspace/open/src/hotspot/share/code/debugInfo.hpp:66), pid=43386, tid=9219
      # assert(is_object()) failed: must be

      Stack: [0x000000010744e000,0x000000010754e000], sp=0x000000010754a4a0, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x1162bbd] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6ed
      V [libjvm.dylib+0x11632f1] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x41
      V [libjvm.dylib+0x59c372] report_vm_error(char const*, int, char const*, char const*, ...)+0x142
      V [libjvm.dylib+0x5bcf2e] Deoptimization::reassign_flat_array_elements(frame*, RegisterMap*, ObjectValue*, flatArrayOop, FlatArrayKlass*, Thread*)+0x1be
      V [libjvm.dylib+0x5bee06] Deoptimization::reassign_fields(frame*, RegisterMap*, GrowableArray<ScopeValue*>*, bool, bool, Thread*)+0x616
      V [libjvm.dylib+0x5b6d1a] Deoptimization::fetch_unroll_info_helper(JavaThread*, int)+0x6ea
      v ~UncommonTrapBlob
      V [libjvm.dylib+0x88f26b] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6bb
      V [libjvm.dylib+0xf31f33] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0x14b3
      V [libjvm.dylib+0xf3093e] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x34e
      V [libjvm.dylib+0xa01373] JVM_InvokeMethod+0x493
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@16-lworld3ea
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+113 java.base@16-lworld3ea
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@16-lworld3ea
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@16-lworld3ea
      J 1017 c1 compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/Class;)V (1010 bytes) @ 0x0000000112ae678c [0x0000000112ae5ba0+0x0000000000000bec]
      J 1016 c1 compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V (47 bytes) @ 0x0000000112ae4e3c [0x0000000112ae4d40+0x00000000000000fc]
      J 745 c1 compiler.valhalla.inlinetypes.TestLWorld.main([Ljava/lang/String;)V (49 bytes) @ 0x0000000112a4a07c [0x0000000112a49180+0x0000000000000efc]
      v ~StubRoutines::call_stub
      V [libjvm.dylib+0x88f26b] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6bb
      V [libjvm.dylib+0x941e01] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*)+0x1a1
      V [libjvm.dylib+0x95bbe5] jni_CallStaticVoidMethod+0x285
      C [libjli.dylib+0x4f5d] JavaMain+0xc1d
      C [libjli.dylib+0x7589] ThreadJavaMain+0x9
      C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
      C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
      C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: