8252112: [lworld] Deoptimization fails when trying to re-assign empty inline type elements of a flattened array